tests/baselines/reference/parserMemberAccessAfterPostfixExpression1.errors.txt
parserMemberAccessAfterPostfixExpression1.ts(1,1): error TS2304: Cannot find name 'a'.
parserMemberAccessAfterPostfixExpression1.ts(1,4): error TS1005: ';' expected.
parserMemberAccessAfterPostfixExpression1.ts(1,5): error TS2552: Cannot find name 'toString'. Did you mean 'String'?


==== parserMemberAccessAfterPostfixExpression1.ts (3 errors) ====
    a--.toString()
    ~
!!! error TS2304: Cannot find name 'a'.
       ~
!!! error TS1005: ';' expected.
        ~~~~~~~~
!!! error TS2552: Cannot find name 'toString'. Did you mean 'String'?
!!! related TS2728 lib.es5.d.ts:--:--: 'String' is declared here.